# snake

./: .clang-format  CMakeLists.txt  README.it.md  README.md
dependencies/: CMakeLists.txt
src/: main.cpp
src/game/: game.cpp  game.hpp  game_manager.cpp  game_manager.hpp  graphics.cpp  graphics.hpp  leaderboard_manager.cpp  leaderboard_manager.hpp  level_list.cpp  level_list.hpp  levels_list.cpp  levels_list.hpp  logic.cpp  logic.hpp  snake_body.cpp  snake_body.hpp
src/graphics/: game_ui.cpp  game_ui.hpp  graphics.cpp  graphics.hpp  leaderboard_ui.cpp  leaderboard_ui.hpp  level_selection_ui.cpp  level_selection_ui.hpp  menu_ui.cpp  menu_ui.hpp  pause_ui.cpp  pause_ui.hpp
src/queue/: list.hpp  queue.hpp
src/utils/: levels_list.hpp  list.hpp  queue.hpp  snake_body.hpp
tests/: CMakeLists.txt  test_lists.cpp  test_logic.cpp  test_queue.cpp
